--- a/package.json
+++ b/package.json
@@ -22,9 +22,19 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "apollo-angular": "1.4.1",
+    "apollo-angular-link-http": "1.3.1",
+    "apollo-cache": "1.1.26",
+    "apollo-cache-inmemory": "1.4.3",
+    "apollo-client": "2.4.13",
+    "apollo-link": "1.2.8",
+    "apollo-link-dedup": "1.0.15",
+    "apollo-utilities": "1.1.3",
     "core-js": "^2.5.4",
     "rxjs": "~6.2.0",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "graphql-tag": "^2.9.2",
+    "graphql": "^0.13.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
